#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(kdtree, 0.1, asmodehn@gna.org)
AC_PREREQ(2.59)
AC_REVISION($Revision: 1.2 $)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/KDTree.cc])
AC_CONFIG_HEADER([config.h])


# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

# Checks for library functions.

AC_CONFIG_FILES([Makefile test/Makefile])
AC_OUTPUT
