## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

kdtree_includedir = $(pkgincludedir)

kdtree_include_DATA = \
	KDTree.hh

EXTRA_DIST = $(kdtree_include_DATA)
