## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CXXFLAGS =\
	-ansi -pedantic\
	 -Wall\
	 -O3\
	 -g -pg

bin_PROGRAMS = kdtree

kdtree_SOURCES = \
	main.cc

kdtree_LDFLAGS = \
	-ansi -pedantic

kdtree_LDADD = 

